Fix legend text wrapping in IE GDS bug fix #248

--- a/src/govuk/sass/elements/_reset.scss
+++ b/src/govuk/sass/elements/_reset.scss
@@ -118,6 +118,19 @@ td {
   font-weight: normal;
 }
 
-abbr[title], acronym[title] {
+abbr[title],
+acronym[title] {
   text-decoration: none;
+}
+
+// Legend --------------------------------
+// Fix legend text wrapping in Edge and IE
+// ---------------------------------------
+// 1. IE9-11 & Edge 12-13
+// 2. IE8-11
+
+legend {
+  box-sizing: border-box; // [1]
+  max-width: 100%;        // [1]
+  display: table;         // [2]
 }
